--- a/css/estilo.css
+++ b/css/estilo.css
@@ -3,7 +3,7 @@
     margin: 0;
     padding: 0;
 }
-/* Aplicamos estilos al borde */
+/* Aplicamos estilos al body */
 body{
     font-family: "Open Sans";
     font-size: 16px;  
@@ -19,9 +19,10 @@ body{
 /* Aplicamos estilos al header */
 header{
     background: url(/img/foto2.jpeg);
+    opacity: 2;
     background-repeat: no-repeat;
     background-position: center;
-    max-height: 600px
+    max-height: 1200px
 }
 /* Aplicamos estilo para el menú */
 header nav{
@@ -32,11 +33,11 @@ header nav a{
     margin: 0 20px;
     padding-bottom: 9px;
     text-decoration: none;
-    border-bottom: solid 2px transparent grey;
+    border-bottom:  2px solid grey transparent ;
     color: white;
 }
-header nav a :hover{
-    border-bottom: 2px solid black;
+header nav a:hover{
+    border-bottom: 2px solid rgb(255, 255, 255);
 }
 /* Aplicamos estilo al contenedor de texto */
 header .contenedortexto{
@@ -67,49 +68,50 @@ header .contenedortexto .texto .profesión{
 
 /* ---------------------CUERPO--------------------- */
 /* ---------------------ACERCA DE--------------------- */
-.peincipal .acercade{
+.principal .acercade{
     text-align: center;
 }
-.principal .acercade .foto{
+.principal .acercade .foto{ 
     margin-top: -60px;
 }
 .principal .acercade .foto img{
-    border-radius: 50px;
+    border-radius: 50%;
     vertical-align: top;
     border: 2px solid gray;
-
+    width: 30%;
+    height: 30%;
 }
 .principal .acercade .texto{
     font-weight: 600;
     width: 80%;
     margin: 40px auto 60px auto;
 }
-.principal .acercade .título{
+.principal .acercade .texto .título{
     font-size: 35px;
     margin-bottom: 40px;
     font-weight: bolder;
-    color: yellow;
+    color: #be9524;
 }
 /* --------------------- FIN ACERCA DE--------------------- */
 
 /* --------------------- TRABAJOS--------------------- */
 .principal .trabajos{
-    background: darkgray;
+    background: #F0F0F0;
     padding: 60px 0;
 }
 .principal .trabajos .título{
     font-size: 35px;
     margin-bottom: 60px;
     font-weight: bolder;
-    color: darkmagenta;
+    color: #431382;
     text-align: center;
 }
 .principal .trabajos .contenedortrabajos{
     justify-content: space-between;
 }
 .principal .trabajos .contenedortrabajos .trabajo{
-    width: 25px;
-    margin-bottom: 40px;
+    width: 500px;
+    margin-bottom: 500px;
 }
 .principal .trabajos .contenedortrabajos .trabajo .imagen{
     width: 100%;
@@ -118,14 +120,14 @@ header .contenedortexto .texto .profesión{
 .principal .trabajos .contenedortrabajos .trabajo .imagen img{
     vertical-align: top;
     width: 100%;
-    border-radius: 5px;
+    border-radius: 50%;
 }
 .principal .trabajos .contenedortrabajos .trabajo .descripción{
 text-align: center;
 }
 .principal .trabajos .contenedortrabajos .trabajo .descripción .nombre{
     font-weight: bolder;
-    color: darkmagenta;
+    color: #431382;
     margin-bottom: 10px;
 }
 .principal .trabajos .contenedortrabajos .trabajo .descripción .categoría{
@@ -134,3 +136,58 @@ text-align: center;
 }
 /* --------------------- FIN DE TRABAJOS--------------------- */
 /* --------------------- FIN DEL CUERPO--------------------- */
+
+/* --------------------- PIE--------------------- */
+footer .contáctanos{
+    padding: 60px;
+}
+footer .contáctanos .título{
+    font-size: 35px;
+    margin-bottom: 60px;
+    font-weight: bolder;
+    color: darkmagenta;
+    text-align: center;
+}
+footer .contáctanos .formulario{
+    justify-content: space-between;
+}
+footer .redessociales{
+    background: #090637;
+    padding: 60px 0;    
+}
+footer .redessociales .contenedor{
+    justify-content: center;
+}
+footer .redessociales .contenedor a {
+    color: white;
+    text-align: center;
+    width: 100px;
+    font-size: 30px;
+    padding: 15px 0;
+    margin: 0 20px;
+    border-radius: 3px;
+}
+footer .redessociales .contenedor a img{
+    text-align: center;
+    width: 5%;
+    height: 5%;
+    font-size: 30px;
+    padding: 15px 0;
+    margin: 0 20px;
+    border-radius: 50%;
+}
+/* footer .redessociales .contenedor .facebook:hover{
+    background: rgb(23, 4, 70);
+}
+footer .redessociales .contenedor .instagram:hover{
+    background: rgb(255, 255, 255);
+}
+footer .redessociales .contenedor .youtube:hover{
+    background: red;
+}
+footer .redessociales .contenedor .twitter:hover{
+    background: red;
+}
+footer .redessociales .contenedor .github:hover{
+    background: red;
+} */
